syntax = "proto3";
package fleet.storycoach.v1;

option go_package = "github.com/underpass-ai/swe-ai-fleet/services/storycoach/gen/fleet/storycoach/v1;storycoachv1";

// StoryCoachService helps PO write better stories with scoring and refinement
service StoryCoachService {
  rpc ScoreStory (ScoreStoryRequest) returns (ScoreStoryResponse);
  rpc RefineStory (RefineStoryRequest) returns (RefineStoryResponse);
  rpc SuggestStory (SuggestStoryRequest) returns (SuggestStoryResponse);
}

message ScoreStoryRequest {
  string title = 1;
  string description = 2;
  repeated string ac = 3; // Acceptance criteria
}

message Finding {
  string code = 1; // AC_MISSING, TITLE_VALUE, SMALL, AMBIGUOUS, DEPS, etc.
  string message = 2;
  int32 weight = 3;
}

message ScoreStoryResponse {
  int32 total = 1; // 0-100
  repeated Finding findings = 2;
}

message RefineStoryRequest {
  string title = 1;
  string description = 2;
  repeated string ac = 3;
}

message RefineStoryResponse {
  string title = 1;
  string description = 2;
  repeated string ac = 3;
}

message SuggestStoryRequest {
  string goal = 1; // One-line capability description
}

message SuggestStoryResponse {
  string title = 1;
  string description = 2;
  repeated string ac = 3;
}



